datalake bug fixes (#2453)
* datalake ui improvements

* datalake overlapping tables fix

* datalake minor bug fixes

* datalake collab bug fix

--- a/packages/datalake-mfe/src/components/tableCollaborators/tableCollaborators.scss
+++ b/packages/datalake-mfe/src/components/tableCollaborators/tableCollaborators.scss
@@ -115,3 +115,6 @@
     }
   }
 }
+.btnRight {
+  text-align: right;
+}
